--- a/.github/actions/setup-environment-n-deps/action.yml
+++ b/.github/actions/setup-environment-n-deps/action.yml
@@ -15,7 +15,7 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: 20
-        cache: "pnpm"
+        cache: 'pnpm'
 
     - name: ⚙️ Get PNPM store directory
       id: pnpm-cache
