--- a/.github/workflows/security-analysis.yml
+++ b/.github/workflows/security-analysis.yml
@@ -14,7 +14,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: "00 08 * * 1"
+    - cron: '00 08 * * 1'
 
 jobs:
   analyze:
@@ -89,4 +89,4 @@ jobs:
       - name: 👮‍♂️ Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
-          category: "/language:${{matrix.language}}"
+          category: '/language:${{matrix.language}}'
