--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "importsNotUsedAsValues": "error"
+    "typeRoots": ["./node_modules/@types", "./src/types"] // <- Add this line
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
