--- a/package.json
+++ b/package.json
@@ -77,14 +77,12 @@
     "wagmi": "^2.12.19"
   },
   "devDependencies": {
-    "husky": "^8.0.3",
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
     "@babel/core": "^7.20.12",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@linaria/vite": "^4.2.11",
-    "semantic-release": "^21.0.7",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -101,10 +99,12 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-helmet": "^6.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "@vitejs/plugin-react": "^3.0.0",
     "arconnect": "^1.0.4",
     "babel-loader": "^8.3.0",
-    "eslint": "^9.12.0",
+    "eslint": "^8.47.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
@@ -112,11 +112,14 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "husky": "^8.0.3",
+    "markdown-toc-gen": "^1.0.1",
     "node-stdlib-browser": "^1.2.1",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-preserve-directives": "^0.2.0",
+    "semantic-release": "^21.0.7",
     "storybook": "^7.0.22",
     "typedoc": "^0.26.10",
     "typescript": "^4.9.3",
@@ -124,8 +127,7 @@
     "vite-plugin-banner": "^0.7.0",
     "vite-plugin-css-injected-by-js": "^3.1.2",
     "vite-plugin-dts": "^1.7.1",
-    "vite-plugin-node-stdlib-browser": "^0.2.1",
-    "markdown-toc-gen": "^1.0.1"
+    "vite-plugin-node-stdlib-browser": "^0.2.1"
   },
   "peerDependencies": {
     "react": "^16.8.0 || 17.x || 18.x",
