--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && yarn build-storybook",
+    "build": "vite build",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "build-docs": "typedoc --out docs src",
+    "build-storybook": "yarn build-docs && storybook build",
+    "build-docs": "typedoc",
+    "publish-docs": "yarn build-storybook && permaweb-deploy --ant-process $DEPLOY_ANT_PROCESS_ID --undername ao-wallet-kit --deploy-folder storybook-static",
+    "serve-docs": "http-server storybook-static --port 8080",
     "test": "echo \"Warning: no test specified\"",
     "format": "prettier . --write",
     "lint": "eslint src"
@@ -83,6 +85,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@linaria/vite": "^4.2.11",
+    "@rwsdatalab/typedoc-storybook-theme": "^1.2.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -112,6 +115,7 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "markdown-toc-gen": "^1.0.1",
     "node-stdlib-browser": "^1.2.1",
@@ -121,7 +125,7 @@
     "rollup-plugin-preserve-directives": "^0.2.0",
     "semantic-release": "^21.0.7",
     "storybook": "^7.0.22",
-    "typedoc": "^0.26.10",
+    "typedoc": "0.25.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-banner": "^0.7.0",
