fix(version): update version script to target dist

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Send Slack notification
         uses: rtCamp/action-slack-notify@v2
         env:
+          SLACK_USERNAME: 'AO Wallet Kit'
           SLACK_TITLE: 'Build / E2E tests succeeded!'
           SLACK_COLOR: 'good'
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
