--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
     secrets: inherit
+  publish-docs:
+    uses: ./.github/workflows/publish-docs.yml
+    secrets: inherit
   release:
     runs-on: ubuntu-latest
     needs: build
