--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,15 +11,13 @@ on:
       - alpha
 
 jobs:
-  build:
-    uses: ./.github/workflows/build.yml
-    secrets: inherit
+  ## publish-docs builds so we know that the app is built and tested
   publish-docs:
     uses: ./.github/workflows/publish-docs.yml
     secrets: inherit
   release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: publish-docs
     permissions:
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
