fix(provider): rename provider

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "jsx": "react-jsx"
   },
   "include": ["src"],
   "exclude": ["node_modules"]
