--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "serve-docs": "http-server storybook-static --port 8080",
     "test": "echo \"Warning: no test specified\"",
     "format": "prettier . --write",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "docs:update": "markdown-toc-gen insert README.md"
   },
   "dependencies": {
     "@ar.io/sdk": "^2.3.2",
@@ -117,6 +118,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.10",
     "markdown-toc-gen": "^1.0.1",
     "node-stdlib-browser": "^1.2.1",
     "prettier": "^2.8.8",
