--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node_version: [18.x, 20.x]
+        node_version: [20.x]
         command: ['lint', 'format', 'build']
     steps:
       - uses: actions/checkout@v4
