--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "lint-staged": "^15.2.10",
     "markdown-toc-gen": "^1.0.1",
     "node-stdlib-browser": "^1.2.1",
+    "permaweb-deploy": "^1.1.8",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
