--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "build": "vite build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "yarn build-docs && storybook build",
-    "build-docs": "typedoc",
+    "build-docs": "typedoc && node tools/fix-mdx-readme.mjs",
     "publish-docs": "node tools/deploy-docs.mjs",
     "serve-docs": "http-server storybook-static --port 8080",
     "test": "echo \"Warning: no test specified\"",
@@ -122,12 +122,13 @@
     "lint-staged": "^15.2.10",
     "markdown-toc-gen": "^1.0.1",
     "node-stdlib-browser": "^1.2.1",
-    "permaweb-deploy": "1.1.5",
+    "permaweb-deploy": "^1.1.8",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-preserve-directives": "^0.2.0",
     "semantic-release": "^21.0.7",
+    "starknet": "^6.11.0",
     "storybook": "^7.0.22",
     "typedoc": "0.25.0",
     "typescript": "^4.9.3",
