--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
+  "browser": "./dist/index.umd.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.umd.js",
+      "browser": "./dist/index.umd.js"
     }
   },
   "files": [
-    "dist",
+    "dist/*",
     "LICENSE",
     "README.md",
     "package.json"
@@ -82,8 +84,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.25.9",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@linaria/vite": "^4.2.11",
