--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@linaria/react": "^4.3.8",
     "@metamask/providers": "^18.1.0",
     "@othent/kms": "2.1.1",
-    "@project-kardeshev/ao-sdk": "^1.0.3",
+    "@project-kardeshev/ao-sdk": "1.0.3",
     "@tanstack/react-query": "^5.59.15",
     "@wagmi/connectors": "^5.2.2",
     "@wagmi/core": "^2.13.9",
